@startuml
' hide the spot
' hide circle

' avoid problems with angled crows feet
' skinparam linetype ortho

left to right direction

entity "SubFile" as sf {
  * key : text
  * filename : text
  --
  * datetime : datetime
  * file_object : file
  * frequency : text
  * preset : text
  * protocol : text
  * manufacture : text
}

entity "KeeloqKey" as kk {
  * serial_number : text
  * key : text
  --
  * is_valid : bool
  * second_part : text
  * inverted_binary : text
  * fixed : text
  * button : text
}

entity "Database2" as db2 {
  * keys : dict
  * receivers : list
}

entity "Key" as k {
  * serial_number : text
  * occurrences : dict
  * receivers : list
  --
  note : text
  tags : list
}

entity "Occurrence" as o {
  * filename : text
  --
  * datetime : datetime
  * counter : text
  * button : text
  --
  loc_lon : text
  loc_lat : text
  scan_place : text
}

entity "Receiver" as r {
  * name : text
  * keys : list
  * type : text
  --
  loc_lon : text
  loc_lat : text
  --
  protocol : text
}

sf::key ||--|| kk::key
o::filename ||--|| sf::filename
o::datetime ||--|| sf::datetime
db2::keys }|--|| k
db2::receivers }|--|| r
o::button ||--|| kk::button
k::occurrences }|--|| o
k::serial_number ||--|| kk::serial_number
k::receivers }|--|| r
r::keys }|--|| k
@enduml